// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsFeeds > matches snapshot with feeds 1`] = `
"<section class="set-section">
  <h2>RSS &amp; Podcasts</h2>
  <p class="desc"> Paste any feed URL — Reader auto-detects whether it's an article feed or a podcast. </p>
  <div class="add-feed">
    <div class="field">
      <r-icon-stub name="rss" size="16"></r-icon-stub><input placeholder="https://example.com/feed.xml">
    </div><button class="btn btn-primary">
      <r-icon-stub name="plus" size="16"></r-icon-stub> Add feed
    </button>
  </div>
  <div class="feed-list">
    <div class="feed-row"><span class="feed-ic" style="--c: var(--src-rss);"><r-icon-stub name="rss" size="16"></r-icon-stub></span>
      <div class="feed-info">
        <div class="feed-name">Test Feed</div>
        <div class="feed-url">test.example.com/feed.xml</div>
      </div><span class="feed-stat count">5 new</span><button class="icon-btn" title="Remove">
        <r-icon-stub name="trash" size="16"></r-icon-stub>
      </button>
    </div>
    <div class="feed-row"><span class="feed-ic" style="--c: var(--src-podcast);"><r-icon-stub name="mic" size="16"></r-icon-stub></span>
      <div class="feed-info">
        <div class="feed-name">Test Podcast</div>
        <div class="feed-url">test.example.com/feed.xml</div>
      </div><span class="feed-stat error">fetch failed</span><button class="icon-btn" title="Remove">
        <r-icon-stub name="trash" size="16"></r-icon-stub>
      </button>
    </div>
  </div>
</section>"
`;

exports[`SettingsFeeds > renders empty feed list without errors 1`] = `
"<section class="set-section">
  <h2>RSS &amp; Podcasts</h2>
  <p class="desc"> Paste any feed URL — Reader auto-detects whether it's an article feed or a podcast. </p>
  <div class="add-feed">
    <div class="field">
      <r-icon-stub name="rss" size="16"></r-icon-stub><input placeholder="https://example.com/feed.xml">
    </div><button class="btn btn-primary">
      <r-icon-stub name="plus" size="16"></r-icon-stub> Add feed
    </button>
  </div>
  <div class="feed-list"></div>
</section>"
`;
